samples/_failures_safe/1761415837_e111b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e010a57.c: In function ‘main’:
./samples/SAFE/__tmp_4e010a57.c:147:9: error: expected expression at end of input
  147 |         bulk_inputs[i] = (
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_4e010a57.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e010a57.c:147:9: error: expected declaration or statement at end of input
